Clean up IfFeatureResolution test a bit
Test setup here is rather verbose, simplify it.

Change-Id: I3ca4cd9e0c419416ecaab63b5647a54043e43152
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>